dashboard class boxes spacing fix, logout button, icons

--- a/src/Containers/Dashboard/dashboard.css
+++ b/src/Containers/Dashboard/dashboard.css
@@ -6,37 +6,23 @@
   padding: 0;
   font-family: 'Lato', sans-serif;
 } */
+.tabs {
+  margin-left: 40px;
+  font-size: 18px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  padding: 0 13px;
+}
 
 .sidebar {
   background-color: #881c1c;
 }
 
-/* .classes{
-    display: block;
-    
-    height: 100%;
-    width: 100%;
-    align-items: left;
-    justify-content: center;
+.logout {
+  margin-left:5px;
+  width: 100%;
 }
 
-.support,
-.results {
-  display: flex;
-  height: 100vh;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem; 
-} */
-
-/* .intro{
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  font-size: 3rem;
-} */
 
 
